# FlowshopSLS

./: CMakeLists.txt  Makefile  README.md  results.csv  resultsII.csv
include/config/: flowShopConfig.hpp  flowShopConfigII.hpp  flowShopConfigMemetic.hpp  flowShopConfigTabuSearch.hpp  flowShopConfigVnd.hpp
include/core/: flowShopII.hpp  flowShopMemetic.hpp  flowShopSLS.hpp  flowShopSolver.hpp  flowShopTabuSearch.hpp  flowShopVnd.hpp  instance.hpp  solution.hpp
include/initialization/: initialization.hpp
include/neighborhoods/: exchangeIterator.hpp  insertIterator.hpp  neighborhoodIterator.hpp  transposeIterator.hpp
include/neighbourhoods/: exchangeIterator.hpp  insertIterator.hpp  neighbourhoodIterator.hpp  transposeIterator.hpp
include/utils/: dataAnalysis.hpp  factories.hpp  flowShopConfig.hpp  memeticTimeLimitProvider.hpp  runAnalyzer.hpp  runLogger.hpp  slsTimeLimitProvider.hpp  stringify.hpp
instances/: bestKnownTCT.txt  instanceFromIntro
results/: ii_time_comparison.csv  qualityAnalysisII.R  resultAnalysisII.R  resultsII.csv  resultsMemetic.csv  resultsTabu.csv  resultsVND.csv  timeAnalysisII.R  vnd_quality_comparison.csv
results/ii/: aggregateResults.R  qualityAnalysis.R  qualityAnalysisII.R  quality_comparison.csv  summary.csv  timeAnalysisII.R
results/memetic/: scenario.txt  target_runner  tune_memetic.R
results/tabu/: parameters_50.txt  scenario.txt  target_runner  tune_tabu.R
results/vnd/: aggregateResults.R  improvement_comparison.csv  qualityAnalysis.R  summary.csv  timeAnalysis.R  time_comparison.csv
src/: config.hpp  dataAnalysis.cpp  dataAnalysis.hpp  flowShopII.cpp  initialization.cpp  instance.cpp  instance.hpp  main.cpp  run  runII  runMemetic  runTS  runVND  solution.cpp
src/config/: flowShopConfig.cpp  flowShopConfigII.cpp  flowShopConfigMemetic.cpp  flowShopConfigTabuSearch.cpp  flowShopConfigVnd.cpp
src/core/: flowShopII.cpp  flowShopMemetic.cpp  flowShopTabuSearch.cpp  flowShopVnd.cpp  instance.cpp  solution.cpp
src/include/: dataAnalysis.hpp  flowShopII.hpp  initialization.hpp  (+1 more)
(+27 files in other folders)
